fixed some style issues on mobile

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -30,6 +30,7 @@ $tertiary: #70BCFF;
 $error: #EB171E;
 $neutral: #F7F7F7;
 $neutral-variant: #EDEBE9;
+$small-screen: 380px;
 
 $primary-pallet: (
   0: #000000,
